<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_str"
                android:id="@+id/textView6"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="40dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:clickable="true"
            android:onClick="onPageAnim">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_user_new"
                android:id="@+id/textView7"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_user_login"
                android:id="@+id/textView8"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp"
                android:onClick="onLogin" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/textView8"
                android:layout_margin="8dp"
                android:hint="请输入用户码" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>